--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "luxon": "^3.6.1",
     "next": "15.2.4",
     "node-appwrite": "^15.0.1",
     "react": "^19.0.0",
