--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   },
   "dependencies": {
     "luxon": "^3.6.1",
-    "next": "15.2.7",
+    "next": "^15.5.9",
     "node-appwrite": "^15.0.1",
-    "react": "^19.1.2",
-    "react-dom": "^19.1.2",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3",
     "react-icons": "^5.5.0",
     "react-toastify": "^11.0.5"
   },
